# wireguard

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: perf.rs  pubkey.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_roundtrip.rs  initiator.rs  parse.rs  responder.rs  session_ops.rs  transport.rs
scripts/: check_no_panic.sh  coverage.sh  fuzz_all.sh  interop_wg_tool.sh
src/: consts.rs  cookie.rs  entropy.rs  error.rs  keys.rs  lib.rs  message.rs  noise.rs  replay.rs  session.rs  testing.rs  time.rs  timers.rs  tunnel.rs
src/crypto/: aead.rs  blake2s.rs  chacha20.rs  ct.rs  kdf.rs  mod.rs  poly1305.rs  x25519.rs
tests/: adversarial.rs  audit_busy_loop_poc.rs  audit_poc.rs  constant_time.rs  cookies_load.rs  handshake_transport.rs  protocol_fuzz.rs  replay_reorder.rs  timers_lifecycle.rs
tests/common/: mod.rs
